# anchor-mpt-demo

./: Anchor.toml  Cargo.toml  README.md  env.example
cli/: Cargo.toml
cli/proof/: mpt.json
cli/src/: main.rs
cli/src/args/: mod.rs
programs/anchor-mpt-demo/: Cargo.toml
programs/anchor-mpt-demo/src/: errors.rs  lib.rs  nibbles.rs  node.rs  trie.rs
tests/: anchor-mpt-demo.ts
